# HydraDeck

./: .gitignore  Dockerfile  README.md  README_SPACES.md  app.py  custom_web.py  pyproject.toml  requirements.txt
hydradeck/: cli.py  config.py  packaging.py  pipeline.py  render.py  resources_pack.py  utils.py
hydradeck/agents/: personas.py
hydradeck/clients/: __init__.py  grok_client.py
hydradeck/core/: types.py
hydradeck/presets/: __init__.py  rynnbrain.py
tests/: test_app_agentic.py  test_cli.py  test_config.py  test_preset_pre.py  test_render.py  test_resources_pack_mock.py  test_smoke_mock.py  test_verbatim_mock.py
